# Skydimo-Lights

./: .gitignore  APP_CATEGORY_CONFIG_README.md  ARCHITECTURE_EXTENSION_DESIGN.md  BUILD.md  CMakeLists.txt  CONFIG_VERIFICATION_GUIDE.md  EXTENSION_SUMMARY.md  FEATURES_SUMMARY.md  QUICK_TEST.md  README.md  README_CPP.md  RULE_ENGINE_README.md  RULE_ENGINE_TEST.md  TEST.md  app_category_config.txt  app_classifier.cpp  app_classifier.h  app_classifier.py  audio_monitor.cpp  audio_monitor.h  main.cpp  main.py  rule_engine.cpp  rule_engine.h  window_monitor.cpp  window_monitor.h  window_monitor.py
